--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+            <a class="nav-link js-scroll-trigger" href="#workExperience">Work Experience</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -65,13 +65,13 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Keith Kei Long
+          <h1 class="mb-0">Keith
             <span class="text-primary">Lai</span>
           </h1>
-          <div class="subheading mb-5">U1305, Tower 1, 588A-600 Railway Parade, Hurstville, NSW, Australia 2220
+          <div class="subheading mb-5">U1305, Tower 1, 588A-600 Railway Parade, Hurstville, NSW, Australia 2220 
             <a href="mailto:keithlai124@hotmail.com">keithlai124@hotmail.com</a>
           </div>
-          <p class="mb-5"> Student studying Bachelor of Engineering (Software)/ Commerce at the University of New South Wales (UNSW). </p>
+          <p class="mb-5"> Student studying Bachelor of Engineering (Software)/Commerce at the University of New South Wales (UNSW). </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/keith.lai.124">
@@ -120,7 +120,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Waiter</h3>
               <div class="subheading mb-3">Hurstville Chinese Restraunt</div>
-              <p> Help run a </p>
+              <p></p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2014 - Feburary 2015</span>
@@ -139,8 +139,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">University of New South Wales</h3>
               <div class="subheading mb-3">Bachelor of Engineering (Software)/Commerce </div>
-              <div>Current WAM: 71.232</div>
-              <p>Won the Optiver SENG3011 Group Award worth a total of $2000</p>
+              <p>Current WAM: 71.232</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">March 2014 - Present</span>
@@ -153,7 +152,6 @@
               <div class="subheading mb-3">International Baccalaureate</div>
               <div>Score: 42/45 (Equivalent of 98.7 ATAR)</div>
               <p> First in cohort for Information Technology in a Global Society (ITGS) </p>
-              <p> Most Improved Student </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">Janurary 2012 - November 2013</span>
@@ -182,10 +180,10 @@
               <i class="devicons devicons-python"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-c"></i>
+              <i class="devicons devicons-java"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
+              <i class="devicons devicons-mongodb"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-bootstrap"></i>
@@ -194,13 +192,13 @@
               <i class="devicons devicons-wordpress"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
+              <i class="devicons devicons-go"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
+              <i class="devicons devicons-flask"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
+              <i class="devicons devicons-perl"></i>
             </li>
           </ul>
 
@@ -225,8 +223,8 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-          <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technolgy advancements in the front-end web development world.</p>
+          <p>Apart from studying, I enjoy spending time playing boardgames with friends and family.</p>
+          <p class="mb-0">I enjoy reading and spend a large amount of time learning about the latest technology advancements in the software industry.</p>
         </div>
       </section>
 
