fix icons and links

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a class="nav-link js-scroll-trigger" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#workExperience">Work Experience</a>
+            <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#education">Education</a>
@@ -68,7 +68,7 @@
           <h1 class="mb-0">Keith
             <span class="text-primary">Lai</span>
           </h1>
-          <div class="subheading mb-5">U1305, Tower 1, 588A-600 Railway Parade, Hurstville, NSW, Australia 2220 
+          <div class="subheading mb-5">Unit 1305, Tower 1, 588A-600 Railway Parade, Hurstville, NSW, Australia 2220 
             <a href="mailto:keithlai124@hotmail.com">keithlai124@hotmail.com</a>
           </div>
           <p class="mb-5"> Student studying Bachelor of Engineering (Software)/Commerce at the University of New South Wales (UNSW). </p>
@@ -82,7 +82,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="#">
+              <a href="https://www.linkedin.com/in/keithlai124">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -168,37 +168,37 @@
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline list-icons">
             <li class="list-inline-item">
-              <i class="devicons devicons-html5"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-css3"></i>
+              <i class="devicons devicons-python"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-javascript"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-python"></i>
-            </li>
-            <li class="list-inline-item">
               <i class="devicons devicons-java"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-mongodb"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
             </li>
             <li class="list-inline-item">
               <i class="devicons devicons-go"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-flask"></i>
+              <i class="devicons devicons-linux"></i>
             </li>
             <li class="list-inline-item">
-              <i class="devicons devicons-perl"></i>
+              <i class="devicons devicons-meteor"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-mongodb"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-git"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-wordpress"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-html5"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-bootstrap"></i>
             </li>
           </ul>
 
@@ -206,13 +206,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-check"></i>
-              Mobile-First, Responsive Design</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Browser Testing &amp; Debugging</li>
-            <li>
-              <i class="fa-li fa fa-check"></i>
-              Cross Functional Teams</li>
+              User centered development</li>
             <li>
               <i class="fa-li fa fa-check"></i>
               Agile Development &amp; Scrum</li>
