Add AdSense code
Adding AdSense code to see if it works.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
-
+    
+    <!-- Adding Google adsense code -->
+    <script data-ad-client="ca-pub-1428391920977348" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    
   </head>
 
   <body id="page-top">
