--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
           <h1 class="mb-0">Keith
             <span class="text-primary">Lai</span>
           </h1>
-          <div class="subheading mb-5">Unit 1305, Tower 1, 588A-600 Railway Parade, Hurstville, NSW, Australia 2220 
+          <div class="subheading mb-5">
+            2A Ada Street, Oatley NSW 2223
             <a href="mailto:keithlai124@hotmail.com">keithlai124@hotmail.com</a>
           </div>
-          <p class="mb-5"> Student studying Bachelor of Engineering (Software)/Commerce at the University of New South Wales (UNSW). </p>
+          <p class="mb-5"> Graduate SEO Engineer at nbn™ Australia. Focusing my passion on DevSecOps along with my analytical and curious personality to improve peoples lives through automation. </p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/keith.lai.124">
@@ -110,23 +111,45 @@
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
+              <h3 class="mb-0">Graduate SEO Engineer</h3>
+              <div class="subheading mb-3">NBN Co</div>
+              <p> Uplifting the technological divide in Australia. </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">Feburary 2020 - Present </span>
+            </div>
+          </div>
+          
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Junior Software Developer</h3>
+              <div class="subheading mb-3">AgriDigital</div>
+              <p> Upgrading the technology of the agriculture sector using blockchain technology. </p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">March 2019 - Janurary 2020 </span>
+            </div>
+          </div>
+          
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
               <h3 class="mb-0">Head Teacher</h3>
               <div class="subheading mb-3">Code Camp</div>
               <p> Teaching the fundimentals of coding to kids.</p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">Janurary 2017 - Present</span>
+              <span class="text-primary">Janurary 2017 - Janurary 20219 </span>
             </div>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Waiter</h3>
-              <div class="subheading mb-3">Hurstville Chinese Restraunt</div>
+              <div class="subheading mb-3">Hurstville Chinese Restraunt </div>
               <p></p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">October 2014 - Feburary 2015</span>
+              <span class="text-primary">October 2014 - Feburary 2015 </span>
             </div>
           </div>
 
@@ -142,10 +165,10 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">University of New South Wales</h3>
               <div class="subheading mb-3">Bachelor of Engineering (Software)/Commerce </div>
-              <p>Current WAM: 71.232</p>
+              <p> WAM: 70.9 </p>
             </div>
             <div class="resume-date text-md-right">
-              <span class="text-primary">March 2014 - Present</span>
+              <span class="text-primary">March 2014 - August 2019 </span>
             </div>
           </div>
 
@@ -220,7 +243,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from studying, I enjoy spending time playing boardgames with friends and family.</p>
+          <p>Apart from studying, I enjoy spending time playing all sorts of games, boardgames, card games, computer games and even tabletop RPGs!</p>
           <p class="mb-0">I enjoy reading and spend a large amount of time learning about the latest technology advancements in the software industry.</p>
         </div>
       </section>
